# patient-monitoring-cpp

./: CMakeLists.txt  README.md
include/: AlarmManager.hpp  HeartRateSensor.hpp  ISensor.hpp  MonitorEngine.hpp  SystemLogger.hpp  TemperatureSensor.hpp
src/: AlarmManager.cpp  HeartRateSensor.cpp  MonitorEngine.cpp  SystemLogger.cpp  TempratureSensor.cpp  main.cpp
tests/: AlarmManagerTests.cpp
